Refreshed swagger gen'd code Changes for announce options
